--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "dotenv": "^16.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0"
   }
 }
